<resources>
    <string name="app_name">Activities of Pallet</string>
    <string name="uhf_initialization">Please wait...\nUHF Initialization is in progress</string>
    <string name="asset_type_master_sync_error">Please Sync Asset Type Master</string>
    <string name="location_master_sync_error">Vendor Master not found</string>
    <string name="room_master_sync_error">Room Master not found</string>
    <string name="lost_asset_master_sync_error">Lost Asset Master not found</string>
    <string name="no_unmapped_asset_error">No Unmapped Assets Found,Please Sync Latest Asset Type Master</string>
    <string name="select_asset_type">Please Select Asset Type</string>
    <string name="select_asset">Please Select Asset</string>
    <string name="invalid_asset_for_selected_asset_type">Please Select valid Asset for selected asset type</string>
    <string name="select_location">Please Select Location</string>
    <string name="select_track_point">Press trigger to scan Track Point RFID</string>
    <string name="invalid_track_point">Invalid Track Point RFID</string>

    <string name="inactive_dashboard_menu">This Module is inactive, Please contact support</string>
    <string name="unIntegrated_dashboard_menu">This Module is not Integrated, Please contact support</string>
    <string name="no_dashboard_menu_active">Dashboard is inactive, Please contact support</string>

    <!--MAPPING-->
    <string name="scan_rfid_tag">Please scan RFID tag</string>
    <string name="invalid_rfid_error">Invalid RFID Tag found. Please try again</string>
    <string name="scan_pallet_tag_error">Container tag scanned, Please scan Pallet tag</string>
    <string name="not_in_master">RFID tag master not found, Please sync master from Dashboard</string>
    <string name="scan_container_tag_error">Pallet tag scanned, Please scan Container tag</string>
    <string name="multiple_rfid_error">Multiple RFID got scanned. Please try again</string>
    <string name="no_rfid_error">Failed to scan RFID Tag. Please try again</string>
    <string name="rfid_already_registered">RFID Tag is already registered</string>
    <string name="barcode_already_scanned">Barcode/QR already scanned</string>
    <string name="pallet_rfid_already_scanned">Pallet RFID Tag already scanned</string>


    <string name="confirm_upload">Do you want to Upload ?</string>
    <string name="confirm_cancel">Are you sure,you want to cancel Inventory?</string>
    <string name="confirm_cancel_check_in">Are you sure,you want to cancel Check IN?</string>
    <string name="confirm_cancel_room_check_in">Are you sure,you want to cancel Room Check IN?</string>
    <string name="confirm_cancel_check_out">Are you sure,you want to cancel Check OUT?</string>
    <string name="confirm_cancel_room_check_out">Are you sure,you want to cancel Room Check OUT?</string>
    <string name="confirm_cancel_track_point">Are you sure,you want to cancel Track Point?</string>
    <string name="confirm_cancel_security_out">Are you sure,you want to cancel Security OUT?</string>
    <string name="confirm_cancel_scanning">Are you sure,you want to cancel Scanning?</string>
    <string name="confirm_back">Do you want to back?</string>


    <string name="login_data_validation">Please enter valid username/password</string>

    <string name="enter_config_url">Enter Valid URL</string>
    <string name="url_not_config">Please Config SERVER URL from setting option</string>
    <string name="url_validation">SERVER URL Validated successfully\nDo you want to set up ?</string>
    <string name="url_config_success">SERVER URL Configured successfully</string>
    <string name="url_config_error">Error in SERVER URL validation</string>


    <string name="reader_not_registered">RFID reader not registered. Contact ADMIN.</string>
    <string name="something_went_wrong_error">Something went wrong. Contact ADMIN.</string>
    <string name="communication_error">Error in communication with server.</string>
    <string name="internet_error">No internet connection found, Please check your internet connection and try again.</string>

    <string name="set_power_fail">set antenna power failed</string>
    <string name="set_power_ok">set antenna power OK</string>
    <string name="power_range">antenna power value range is 0 ~ 30</string>


    <string name="param">param:</string>
    <string name="set">Set</string>
    <string name="id">ID</string>
    <string name="get">Get</string>
    <string name="value">Value</string>
    <string name="startvideo">StartVideo</string>
    <string name="getlastimage">GetLastImage</string>
    <string name="set_param_successfully">Set param successfully</string>
    <string name="errot_settings_failed">Error:Settings failed</string>
    <string name="error">Error:</string>
    <string name="barcode">barcode:</string>
    <string name="type">type:</string>
    <string name="length">length:</string>
    <string name="setaimeronoff">Aimer On/Off</string>

    <string name="footer">Powered by : Perceptron Software Labs Pvt Ltd</string>


</resources>