<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DummyBarcodeScannerActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:visibility="visible" />

            <EditText
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:lines="5" >

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:text="@string/param"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_setvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/set" />

                <EditText
                    android:id="@+id/edt_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/id" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_getvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get" />

                <EditText
                    android:id="@+id/edt_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/value" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
            </LinearLayout>

            <Button
                android:id="@+id/bt_startVideo"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:text="@string/startvideo" />

            <Button
                android:id="@+id/bt_getLastImage"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:text="@string/getlastimage" />

            <Button
                android:id="@+id/bt_set_aimer_onoff"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:text="@string/setaimeronoff" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>